examples/test/testpolicy13891.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13891
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key12: value42
      key41: value42
      key2: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value13
          key30: value45
          key48: value12
